@@ -103,8 +103,8 @@ umac128_digest (struct umac128_ctx *ctx,
     }
   assert (ctx->count > 0);
 
-  aes_encrypt (&ctx->pdf_key, AES_BLOCK_SIZE,
-	       (uint8_t *) tag, ctx->nonce);
+  aes128_encrypt (&ctx->pdf_key, AES_BLOCK_SIZE,
+		  (uint8_t *) tag, ctx->nonce);
 
   INCREMENT (ctx->nonce_length, ctx->nonce);
 
