@@ -100,8 +100,8 @@ umac32_digest (struct umac32_ctx *ctx,
   assert (ctx->count > 0);
   if ( !(ctx->nonce_low & _UMAC_NONCE_CACHED))
     {
-      aes_encrypt (&ctx->pdf_key, AES_BLOCK_SIZE,
-		   (uint8_t *) ctx->pad_cache, ctx->nonce);
+      aes128_encrypt (&ctx->pdf_key, AES_BLOCK_SIZE,
+		      (uint8_t *) ctx->pad_cache, ctx->nonce);
       ctx->nonce_low |= _UMAC_NONCE_CACHED;
     }
 
